--- a/index.html
+++ b/index.html
@@ -375,9 +375,9 @@
                               class="tp-hero-2-heading-title wow fadeInUp"
                               data-wow-duration=".9s"
                               data-wow-delay=".3s">
-                              Make the future <br />
-                              bright with solar <br />
-                              power
+                              Say Goodbye to High <br>Electricity Bills <br>
+                              Solar
+                              Energy <br>Starts Here!
                            </h3>
                         </div>
                         <div
@@ -435,8 +435,7 @@
                         <span class="tp-section-title-pre">KNOW ABOUT OUR
                            AGENCY</span>
                         <h4 class="tp-section-title">
-                           We are ready fo solar energy, all <br />
-                           we need is to see use it well!
+                           Powering Trichy with Sustainable Solar Solutions!
                         </h4>
                      </div>
                   </div>
@@ -457,30 +456,21 @@
                                  d="M63.5875 2.39867C62.7275 1.54075 61.688 0.884258 60.5437 0.476513C59.3995 0.0687687 58.179 -0.0800787 56.9703 0.0406965C49.2856 0.783583 23.4414 3.9835 13.4592 13.9547C8.68759 18.7393 5.85809 25.1223 5.51712 31.871C5.17616 38.6196 7.34791 45.2553 11.613 50.4965L0.772359 61.3371C0.271164 61.856 -0.0061649 62.5511 0.000104011 63.2725C0.00637292 63.9939 0.295738 64.684 0.805875 65.1941C1.31601 65.7043 2.00611 65.9936 2.72752 65.9999C3.44894 66.0062 4.14395 65.7288 4.66288 65.2276L15.5035 54.387C20.7436 58.6578 27.3811 60.8341 34.1326 60.4951C40.8842 60.1561 47.2703 57.326 52.0563 52.5518C62.1705 42.4348 65.2631 16.6704 65.9757 9.01587C66.0922 7.80489 65.9384 6.58314 65.5254 5.43882C65.1124 4.29449 64.4505 3.25613 63.5875 2.39867ZM48.1795 48.6503C44.4279 52.3881 39.4443 54.6328 34.159 54.9654C28.8737 55.2981 23.6479 53.6959 19.4573 50.4579L45.9591 23.9561C46.4603 23.4372 46.7376 22.7422 46.7313 22.0208C46.7251 21.2994 46.4357 20.6093 45.9256 20.0991C45.4154 19.589 44.7253 19.2996 44.0039 19.2934C43.2825 19.2871 42.5875 19.5644 42.0686 20.0656L15.553 46.5674C12.3145 42.3771 10.712 37.1512 11.0446 31.8657C11.3773 26.5802 13.6224 21.5965 17.3607 17.8452C24.2641 10.9446 43.2985 6.87801 57.5013 5.51605C57.9036 5.4769 58.3095 5.52686 58.6903 5.66237C59.0711 5.79787 59.4173 6.0156 59.7044 6.30007C59.9915 6.58454 60.2124 6.92876 60.3514 7.30827C60.4904 7.68778 60.5441 8.09324 60.5086 8.49585C59.1329 23.3178 55.1681 41.6479 48.1657 48.6503H48.1795Z"
                                  fill="#3A954F" /></svg></span>
                         <p class="mb-30">
-                           Since 1985 Reed has pioneered specialist recruitment
-                           <br />
-                           sourcing knowledgeable, skilled professionals for
-                           <br />
-                           jobs across the UK looking finance.
-                           <br />
-                           Lorem ipsum, dolor sit amet consectetur adipisicing
-                           elit. Eos
-                           ut nobis doloribus fuga nulla? Quis, odio magni
-                           dignissimos
-                           at, voluptate perspiciatis est placeat vel animi
-                           maxime
-                           facilis voluptatem? Accusamus, aliquam!
-                           <br />
-                           Lorem ipsum dolor sit amet, consectetur adipisicing
-                           elit.
-                           Labore beatae dolore sit? Unde voluptatem dolor vero
-                           recusandae nostrum doloribus rem blanditiis saepe
-                           culpa, modi
-                           eveniet assumenda distinctio pariatur, quaerat atque!
-                           <br />
-                           Lorem ipsum dolor sit amet consectetur adipisicing
-                           elit. Omnis
-                           in ex corrupti. Nostrum ea vero accusantium?
+                           At Kannaas and Co, we are committed to transforming
+                           the way you harness energy. With our best solar
+                           panels in Trichy and expert solar panel installation
+                           services, we help homes and businesses switch to
+                           clean, renewable solar power effortlessly.
+                           <br /><br>
+                           With decades of expertise, our team ensures seamless
+                           solar power system installations, offering on-grid
+                           and off-grid solutions tailored to your needs.
+                           Whether you're looking to reduce electricity bills,
+                           embrace energy independence, or contribute to a
+                           greener planet, we've got you covered.
+                           <br /> <br>
+                           Join us in creating a brighter, sustainable future
+                           with top-quality solar energy solutions in Trichy!
                         </p>
                         <div class="tp-about-list tp-about-2-list">
                            <ul>
@@ -496,8 +486,8 @@
                                           stroke="white"
                                           stroke-width="2"
                                           stroke-linecap="round"
-                                          stroke-linejoin="round"></path></svg></span>Redefining
-                                 energy with solar technology
+                                          stroke-linejoin="round"></path></svg></span>Revolutionizing
+                                 Power with Smart Solar Solutions
                               </li>
                               <li>
                                  <span><svg
@@ -511,8 +501,9 @@
                                           stroke="white"
                                           stroke-width="2"
                                           stroke-linecap="round"
-                                          stroke-linejoin="round"></path></svg></span>Solar
-                                 solutions for a brighter tomorrow
+                                          stroke-linejoin="round"></path></svg></span>Harness
+                                 the Sun, Empower Your Future
+
                               </li>
                            </ul>
                         </div>
@@ -624,8 +615,8 @@
                         <span class="tp-section-title-pre">CHECK OUR SOLAR
                            SERVICES</span>
                         <h4 class="tp-section-title">
-                           Produce your own clean <br />
-                           save the environment
+                           Switch to Solar – Smart, Sustainable, and
+                           Cost-Effective!
                         </h4>
                      </div>
                   </div>
@@ -686,9 +677,8 @@
                                     System</a>
                               </h4>
                               <p>
-                                 Since 1985 Reed has pioneered spe cialist
-                                 recruitment,
-                                 sourcing
+                                 Connect to the grid and enjoy uninterrupted
+                                 power while reducing electricity bills.
                               </p>
                               <a class="tp-service-item-btn"
                                  href="service-details.html">See More
@@ -748,9 +738,8 @@
                                     System</a>
                               </h4>
                               <p>
-                                 Since 1985 Reed has pioneered spe cialist
-                                 recruitment,
-                                 sourcing
+                                 Achieve energy independence with reliable solar
+                                 power, even in remote locations.
                               </p>
                               <a class="tp-service-item-btn"
                                  href="service-details.html">See More
@@ -825,9 +814,8 @@
                                     System</a>
                               </h4>
                               <p>
-                                 Since 1985 Reed has pioneered spe cialist
-                                 recruitment,
-                                 sourcing
+                                 Get the best of both worlds with grid support
+                                 and battery backup for 24/7 power.
                               </p>
                               <a class="tp-service-item-btn"
                                  href="service-details.html">See More
@@ -902,9 +890,8 @@
                                     System</a>
                               </h4>
                               <p>
-                                 Since 1985 Reed has pioneered spe cialist
-                                 recruitment,
-                                 sourcing
+                                 Efficient, cost-effective lighting powered by
+                                 renewable energy.
                               </p>
                               <a class="tp-service-item-btn"
                                  href="service-details.html">See More
@@ -979,9 +966,8 @@
                                     Pumping</a>
                               </h4>
                               <p>
-                                 Since 1985 Reed has pioneered spe cialist
-                                 recruitment,
-                                 sourcing
+                                 Reliable water supply solutions using solar
+                                 power for agriculture and industries.
                               </p>
                               <a class="tp-service-item-btn"
                                  href="service-details.html">See More
@@ -1012,8 +998,9 @@
                <div class="row">
                   <div class="col-lg-12">
                      <div class="tp-step-heading mb-80 text-center">
-                        <span class="tp-section-title-pre">OUR 4 WORKING
-                           STEPS</span>
+                        <span class="tp-section-title-pre">OUR 4 STEP SOLAR
+                           INSTALLATION PROCESS
+                        </span>
                         <h4 class="tp-section-title">Our working steps</h4>
                      </div>
                   </div>
@@ -1044,8 +1031,9 @@
                               <h4 class="tp-step-item-title">Initial
                                  consultation</h4>
                               <p>
-                                 Since 1985 Reed has pioneered <br />
-                                 cialist recruitment, sour
+                                 We assess your energy needs and recommend the
+                                 best solar panel system for your home or
+                                 business.
                               </p>
                            </div>
                         </div>
@@ -1059,8 +1047,9 @@
                            <div class="tp-step-item-content">
                               <h4 class="tp-step-item-title">System design</h4>
                               <p>
-                                 Since 1985 Reed has pioneered <br />
-                                 cialist recruitment, sour
+                                 Our experts design a tailor-made solar solution
+                                 that maximizes efficiency and savings.
+
                               </p>
                            </div>
                         </div>
@@ -1075,8 +1064,8 @@
                               <h4 class="tp-step-item-title">Install &
                                  active</h4>
                               <p>
-                                 Since 1985 Reed has pioneered <br />
-                                 cialist recruitment, sour
+                                 Our certified professionals ensure a smooth and
+                                 secure solar panel installation, ready for use.
                               </p>
                            </div>
                         </div>
@@ -1091,8 +1080,10 @@
                               <h4 class="tp-step-item-title">System
                                  monitoring</h4>
                               <p>
-                                 Since 1985 Reed has pioneered <br />
-                                 cialist recruitment, sour
+                                 We provide ongoing support and system
+                                 monitoring to ensure optimal solar energy
+                                 output.
+
                               </p>
                            </div>
                         </div>
@@ -1720,8 +1711,12 @@
                                  src="assets/img/logo/logo-rgb.png" alt></a>
                         </div>
                         <div class="tp-footer-widget-content">
-                           <p>Our highly skilled development teams <br>
-                              specialized in data analysis.</p>
+                           <p>At Kannaas and Co, we provide reliable,
+                              cost-effective solar solutions tailored to your
+                              needs. With years of expertise in solar
+                              installation and design, our team ensures seamless
+                              service and ongoing support, helping you save
+                              energy and contribute to a greener future.</p>
 
                            <div class="col-lg-8">
                               <div class="tp-footer-widget-social text-lg-end">
