--- a/service.html
+++ b/service.html
@@ -381,7 +381,8 @@
                                  src="assets/img/service/home-3/service-3-1.jpg"
                                  alt></a>
                            <h4 class="tp-service-3-item-thumb-title"><a
-                                 href="service-details.html">On-grid Solar System</a></h4>
+                                 href="service-details.html">On-grid Solar
+                                 System</a></h4>
                         </div>
                         <div class="tp-service-3-item-content text-center">
                            <span><svg width="42" height="42" viewBox="0 0 42 42"
@@ -415,9 +416,11 @@
                                     fill="currentColor"></path>
                               </svg></span>
                            <h4 class="tp-service-3-item-title"><a
-                                 href="service-details.html">On-grid Solar System</a></h4>
-                           <p>Since 1985 Reed has pioneered <br>
-                              cialist recruitment, sourcing</p>
+                                 href="service-details.html">On-grid Solar
+                                 System</a></h4>
+                           <p>Connect to the grid and enjoy uninterrupted power
+                              while reducing electricity bills.
+                           </p>
                            <a class="tp-service-3-item-btn"
                               href="service-details.html"><svg width="14"
                                  height="14" viewBox="0 0 14 14" fill="none"
@@ -437,7 +440,8 @@
                                  src="assets/img/service/home-3/service-3-2.jpg"
                                  alt></a>
                            <h4 class="tp-service-3-item-thumb-title"><a
-                                 href="service-details.html">Off-grid Solar System</a></h4>
+                                 href="service-details.html">Off-grid Solar
+                                 System</a></h4>
                         </div>
                         <div class="tp-service-3-item-content text-center">
                            <span><svg xmlns="http://www.w3.org/2000/svg"
@@ -475,9 +479,10 @@
                                     fill="currentColor"></path>
                               </svg></span>
                            <h4 class="tp-service-3-item-title"><a
-                                 href="service-details.html">Off-grid Solar System</a></h4>
-                           <p>Since 1985 Reed has pioneered <br>
-                              cialist recruitment, sourcing</p>
+                                 href="service-details.html">Off-grid Solar
+                                 System</a></h4>
+                           <p>Achieve energy independence with reliable solar
+                              power, even in remote locations.</p>
                            <a class="tp-service-3-item-btn"
                               href="service-details.html"><svg width="14"
                                  height="14" viewBox="0 0 14 14" fill="none"
@@ -497,7 +502,8 @@
                                  src="assets/img/service/home-3/service-3-3.jpg"
                                  alt></a>
                            <h4 class="tp-service-3-item-thumb-title"><a
-                                 href="service-details.html">Hybrid Solar System</a></h4>
+                                 href="service-details.html">Hybrid Solar
+                                 System</a></h4>
                         </div>
                         <div class="tp-service-3-item-content text-center">
                            <span><svg xmlns="http://www.w3.org/2000/svg"
@@ -520,9 +526,11 @@
                                     fill="currentColor"></path>
                               </svg></span>
                            <h4 class="tp-service-3-item-title"><a
-                                 href="service-details.html">Hybrid Solar System</a></h4>
-                           <p>Since 1985 Reed has pioneered <br>
-                              cialist recruitment, sourcing</p>
+                                 href="service-details.html">Hybrid Solar
+                                 System</a></h4>
+                           <p>Get the best of both worlds with grid support and
+                              battery backup for 24/7 power.
+                           </p>
                            <a class="tp-service-3-item-btn"
                               href="service-details.html"><svg width="14"
                                  height="14" viewBox="0 0 14 14" fill="none"
@@ -542,7 +550,8 @@
                                  src="assets/img/service/home-3/service-3-4.jpg"
                                  alt></a>
                            <h4 class="tp-service-3-item-thumb-title"><a
-                                 href="service-details.html">Street Light System</a></h4>
+                                 href="service-details.html">Street Light
+                                 System</a></h4>
                         </div>
                         <div class="tp-service-3-item-content text-center">
                            <span><svg xmlns="http://www.w3.org/2000/svg"
@@ -565,9 +574,10 @@
                                     fill="currentColor"></path>
                               </svg></span>
                            <h4 class="tp-service-3-item-title"><a
-                                 href="service-details.html">Street Light System</a></h4>
-                           <p>Since 1985 Reed has pioneered <br>
-                              cialist recruitment, sourcing</p>
+                                 href="service-details.html">Street Light
+                                 System</a></h4>
+                           <p>Efficient, cost-effective lighting powered by
+                              renewable energy.</p>
                            <a class="tp-service-3-item-btn"
                               href="service-details.html"><svg width="14"
                                  height="14" viewBox="0 0 14 14" fill="none"
@@ -587,7 +597,8 @@
                                  src="assets/img/service/home-3/service-3-5.jpg"
                                  alt></a>
                            <h4 class="tp-service-3-item-thumb-title"><a
-                                 href="service-details.html">Solar Water Pumping</a></h4>
+                                 href="service-details.html">Solar Water
+                                 Pumping</a></h4>
                         </div>
                         <div class="tp-service-3-item-content text-center">
                            <span><svg xmlns="http://www.w3.org/2000/svg"
@@ -610,9 +621,10 @@
                                     fill="currentColor"></path>
                               </svg></span>
                            <h4 class="tp-service-3-item-title"><a
-                                 href="service-details.html">Solar Water Pumping</a></h4>
-                           <p>Since 1985 Reed has pioneered <br>
-                              cialist recruitment, sourcing</p>
+                                 href="service-details.html">Solar Water
+                                 Pumping</a></h4>
+                           <p>Reliable water supply solutions using solar power
+                              for agriculture and industries.</p>
                            <a class="tp-service-3-item-btn"
                               href="service-details.html"><svg width="14"
                                  height="14" viewBox="0 0 14 14" fill="none"
@@ -625,7 +637,7 @@
                         </div>
                      </div>
                   </div>
-                  
+
                </div>
             </div>
          </section>
@@ -651,7 +663,8 @@
                                     Now</span></a>
                            </div>
                            <div class="tp-cta-6-call">
-                              <a href="tel:918925511901"><svg width="18" height="18"
+                              <a href="tel:918925511901"><svg width="18"
+                                    height="18"
                                     viewBox="0 0 18 18" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -797,7 +810,9 @@
                                              d="M18.0645 13.1501C18.6633 13.6924 19 14.3036 19 14.9501C19 17.1869 14.9706 19.0001 10 19.0001C5.02944 19.0001 1 17.1869 1 14.9501C1 14.3036 1.33671 13.6924 1.93552 13.1501"
                                              stroke="#FF7029" stroke-width="1.5"
                                              stroke-linecap="round" />
-                                       </svg></span>No.8, Sakthi Nagar, Dindigul Main Road, Near SBI Bank, Karumandapam, Tiruchirappalli, Tamil Nadu, India</a>
+                                       </svg></span>No.8, Sakthi Nagar, Dindigul
+                                    Main Road, Near SBI Bank, Karumandapam,
+                                    Tiruchirappalli, Tamil Nadu, India</a>
                               </div>
                            </div>
                         </div>
@@ -809,9 +824,10 @@
                <div class="row align-items-center">
                   <div class="col-lg-6">
                      <div class="tp-footer-copyright">
-                       <p>Copyright &copy; 2025 <a href="#"
-                           style="color: #fabb25">Kannaa's & Co</a> All Rights
-                        Reserved.</p>
+                        <p>Copyright &copy; 2025 <a href="#"
+                              style="color: #fabb25">Kannaa's & Co</a> All
+                           Rights
+                           Reserved.</p>
                      </div>
 
                   </div>
