--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
    <!-- Place favicon.ico in the root directory -->
-   <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/favicon.png" />
+   <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/favicon.webp" />
 
    <!-- CSS here -->
    <link rel="stylesheet" href="assets/css/bootstrap.css" />
@@ -69,7 +69,7 @@
             <div class="offcanvas__top mb-40">
                <div class="offcanvas__logo">
                   <a href="index.html">
-                     <img data-width="120" src="assets/img/logo/logo-rgb.png" alt="logo" />
+                     <img data-width="120" src="assets/img/logo/logo-rgb.webp" alt="logo" />
                   </a>
                </div>
             </div>
@@ -172,7 +172,7 @@
             <div class="d-flex justify-content-between align-items-center">
                <div class="tp-header-logo">
                   <a href="index.html">
-                     <img data-width="130" src="assets/img/logo/logo-black.png" alt />
+                     <img data-width="130" src="assets/img/logo/logo-black.webp" alt />
                   </a>
                </div>
                <div class="tp-header-box d-flex align-items-center justify-content-between">
@@ -237,7 +237,7 @@
             <div class="d-flex justify-content-between align-items-center">
                <div class="tp-header-logo">
                   <a href="index.html">
-                     <img data-width="130" src="assets/img/logo/logo-black.png" alt />
+                     <img data-width="130" src="assets/img/logo/logo-black.webp" alt />
                   </a>
                </div>
                <div class="tp-header-box d-flex align-items-center justify-content-between">
@@ -300,7 +300,7 @@
 
    <main>
       <!-- hero area start -->
-      <section class="tp-hero-2-ptb fix p-relative" data-background="assets/img/hero/home-2/home-2-bg.jpg">
+      <section class="tp-hero-2-ptb fix p-relative" data-background="assets/img/hero/home-2/home-2-bg.webp">
          <div class="container">
             <div class="row">
                <div class="col-lg-12">
@@ -409,7 +409,7 @@
                   <div class="tp-about-2-thumb p-relative">
                      <div class="tp-about-2-thumb-main wow img-custom-anim-top" data-wow-duration="1.5s"
                         data-wow-delay="0.1s">
-                        <img src="assets/img/about/home-2/about-thumb-2-1.jpg" alt />
+                        <img src="assets/img/about/home-2/about-thumb-2-1.webp.webp" alt />
                      </div>
                      <div class="tp-about-2-video text-center">
                         <div class="tp-about-2-video-thumb p-relative">
@@ -493,7 +493,7 @@
                   <div class="tp-service-2-item p-relative mb-30 wow fadeInUp" data-wow-duration=".9s"
                      data-wow-delay=".3s">
                      <div class="tp-service-2-bg-img">
-                        <img src="assets/img/service/home-2/service-thumb-2.jpg" alt />
+                        <img src="assets/img/service/home-2/service-1.webp" alt />
                      </div>
                      <div class="tp-service-item">
                         <div class="tp-service-2-item-icon">
@@ -554,7 +554,7 @@
                   <div class="tp-service-2-item p-relative mb-30 wow fadeInUp" data-wow-duration=".9s"
                      data-wow-delay=".5s">
                      <div class="tp-service-2-bg-img">
-                        <img src="assets/img/service/home-2/service-thumb-2.jpg" alt />
+                        <img src="assets/img/service/home-2/service-2.webp" alt />
                      </div>
                      <div class="tp-service-item">
                         <div class="tp-service-2-item-icon">
@@ -600,7 +600,7 @@
                   <div class="tp-service-2-item p-relative mb-30 wow fadeInUp" data-wow-duration=".9s"
                      data-wow-delay=".7s">
                      <div class="tp-service-2-bg-img">
-                        <img src="assets/img/service/home-2/service-thumb-2.jpg" alt />
+                        <img src="assets/img/service/home-2/service-3.webp" alt />
                      </div>
                      <div class="tp-service-item">
                         <div class="tp-service-2-item-icon">
@@ -653,7 +653,7 @@
                   <div class="tp-service-2-item p-relative mb-30 wow fadeInUp" data-wow-duration=".9s"
                      data-wow-delay=".7s">
                      <div class="tp-service-2-bg-img">
-                        <img src="assets/img/service/home-2/service-thumb-2.jpg" alt />
+                        <img src="assets/img/service/home-2/service-4.webp" alt />
                      </div>
                      <div class="tp-service-item">
                         <div class="tp-service-2-item-icon">
@@ -706,7 +706,7 @@
                   <div class="tp-service-2-item p-relative mb-30 wow fadeInUp" data-wow-duration=".9s"
                      data-wow-delay=".7s">
                      <div class="tp-service-2-bg-img">
-                        <img src="assets/img/service/home-2/service-thumb-2.jpg" alt />
+                        <img src="assets/img/service/home-2/service-5.webp" alt />
                      </div>
                      <div class="tp-service-item">
                         <div class="tp-service-2-item-icon">
@@ -776,13 +776,13 @@
             <div class="tp-step-box p-relative wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".3s">
                <div class="tp-step-shapes">
                   <div class="tp-step-shape-1">
-                     <img src="assets/img/step/step-arrow-1.png" alt />
+                     <img src="assets/img/step/step-arrow-1.webp" alt />
                   </div>
                   <div class="tp-step-shape-2">
-                     <img src="assets/img/step/step-arrow-2.png" alt />
+                     <img src="assets/img/step/step-arrow-2.webp" alt />
                   </div>
                   <div class="tp-step-shape-3">
-                     <img src="assets/img/step/step-arrow-1.png" alt />
+                     <img src="assets/img/step/step-arrow-1.webp" alt />
                   </div>
                </div>
                <div class="row">
@@ -1434,7 +1434,7 @@
                <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                   <div class="tp-footer-widget tp-footer-col-1 mb-50">
                      <div class="tp-footer-logo mb-35">
-                        <a href="index.html"> <img data-width="120" src="assets/img/logo/logo-rgb.png" alt></a>
+                        <a href="index.html"> <img data-width="120" src="assets/img/logo/logo-rgb.webp" alt></a>
                      </div>
                      <div class="tp-footer-widget-content">
                         <p>At Kannaas and Co, we provide reliable,
