--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Place favicon.ico in the root directory -->
-      <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/favicon.png">
+      <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/favicon.webp">
 
       <!-- CSS here -->
       <link rel="stylesheet" href="assets/css/bootstrap.css">
@@ -63,7 +63,7 @@
                <div class="offcanvas__top mb-40">
                   <div class="offcanvas__logo">
                      <a href="index.html">
-                        <img data-width="120" src="assets/img/logo/logo-white.png" alt="logo">
+                        <img data-width="120" src="assets/img/logo/logo-white.webp" alt="logo">
                      </a>
                   </div>
                </div>
@@ -159,7 +159,7 @@
                <div class="d-flex justify-content-between align-items-center">
                   <div class="tp-header-logo">
                      <a href="index.html">
-                        <img data-width="130" src="assets/img/logo/logo-black.png" alt="">
+                        <img data-width="130" src="assets/img/logo/logo-black.webp" alt="">
                      </a>
                   </div>
                   <div class="tp-header-box d-flex align-items-center justify-content-between">
@@ -347,7 +347,7 @@
                <div class="d-flex justify-content-between align-items-center">
                   <div class="tp-header-logo">
                      <a href="index.html">
-                        <img data-width="130" src="assets/img/logo/logo-black.png" alt="">
+                        <img data-width="130" src="assets/img/logo/logo-black.webp" alt="">
                      </a>
                   </div>
                   <div class="tp-header-box d-flex align-items-center justify-content-between">
@@ -690,7 +690,7 @@
                      <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                         <div class="tp-footer-widget tp-footer-col-1 mb-50">
                            <div class="tp-footer-logo mb-35">
-                              <a href="index.html"> <img data-width="120" src="assets/img/logo/logo-rgb.png" alt=""></a>
+                              <a href="index.html"> <img data-width="120" src="assets/img/logo/logo-rgb.webp" alt=""></a>
                            </div>
                            <div class="tp-footer-widget-content">
                               <p>Our highly skilled development teams <br>
